# Nutre

./: .gitignore  404.html  DEPLOY_INSTRUCTIONS.md  FINAL_INSTRUCTIONS.md  GITHUB_DESKTOP_INSTRUCTIONS.md  README.md  deploy_website.bat  download_images.bat  find_images.bat  index.html  install_git.bat  netlify.toml  open_local.bat  privacy.html  script.js  site.webmanifest  sitemap.xml  start_server.bat  styles.css
.github/workflows/: pages.yml
farm_marketplace/: APK_READY.html  APK_READY.md  BUILD_INSTRUCTIONS.md  Cargo.toml  Cargo_apk.toml  DOWNLOAD_APK.html  Dockerfile  Dockerfile_APK  Makefile  Makefile_APK  ONLINE_BUILD_GUIDE.md  PROJECT_COMPLETE.md  QUICK_START.md  README.md  README_APK.md  README_FINAL.md  README_WEB_APP.md  READY_TO_COPY_CODE.txt  REAL_APK_SOLUTION.html  build.gradle  build_apk.bat  build_apk.gradle  build_apk.js  build_apk.ps1  build_apk.py  build_apk.sh  build_apk_auto.bat  build_with_chocolatey.bat  codemagic.yaml  create_apk.bat  create_apk.js  create_apk.ps1  create_apk.py  create_apk.sh  create_apk_simple.bat  docker-compose-apk.yml  docker-compose.yml  farm_marketplace.apk  go.mod  go_apk.mod  (+17 more)
farm_marketplace/.github/workflows/: build-apk.yml  build.yml  create-apk.yml
farm_marketplace/android/app/: build.gradle
farm_marketplace/lib/: main.dart  main_simple.dart
farm_marketplace/lib/constants/: app_constants.dart
farm_marketplace/lib/models/: category.dart  order.dart  product.dart  user.dart
farm_marketplace/lib/providers/: auth_provider.dart  cart_provider.dart
farm_marketplace/lib/screens/: main_screen.dart
(+20 files in other folders)
