[package]
name = "farm-marketplace-apk-builder"
version = "1.0.0"
edition = "2021"
authors = ["Farm Marketplace Team <team@farmmarketplace.com>"]
description = "Автоматическая сборка APK для Фермерского Маркетплейса"
license = "MIT"
repository = "https://github.com/farm-marketplace/apk-builder"
homepage = "https://github.com/farm-marketplace/apk-builder"
documentation = "https://github.com/farm-marketplace/apk-builder#readme"
keywords = ["flutter", "apk", "android", "farm", "marketplace", "mobile"]
categories = ["development-tools", "build-utils"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
colored = "2.0"
anyhow = "1.0"
thiserror = "1.0"
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
walkdir = "2.3"
glob = "0.3"
regex = "1.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.0"

[[bin]]
name = "farm-apk-builder"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
